abstract class Adventurer {
    
}